--- a/web/src/Styling/TopicCard/TopicCard.css
+++ b/web/src/Styling/TopicCard/TopicCard.css
@@ -18,12 +18,12 @@
     transition: transform 300ms ease-in;
   }
   .topic-card-parent .topic-card-description {
-    height: 300px;
+    max-height: 350px;
     overflow: auto;
-    transition: all 300ms ease-in;
   }
   .topic-card-parent .topic-card-description.expanding {
-    height: 700px;
+    max-height: 700px;
+    transition: max-height 300ms ease-in;
   }
 }
 @media screen and (min-width: 602px) {
@@ -40,12 +40,12 @@
     transition: transform 300ms ease-out;
   }
   .topic-card-parent .topic-card-description {
-    height: 170px;
+    max-height: 250px;
     overflow: auto;
-    transition: all 300ms ease-in;
   }
   .topic-card-parent .topic-card-description.expanding {
-    height: 440px;
+    max-height: 600px;
+    transition: max-height 300ms ease-in;
   }
 }
 .topic-card-parent .topic-card {
