--- a/web/src/Styling/TopicCard/_variables.scss
+++ b/web/src/Styling/TopicCard/_variables.scss
@@ -28,12 +28,12 @@ $image-shrinkage: 0.75;
     }
 
     & .topic-card-description {
-      height: 300px;
+      max-height: 350px;
       overflow: auto;
-      transition: all 300ms ease-in;
     }
     & .topic-card-description.expanding {
-      height: 700px;
+      max-height: 700px;
+      transition: max-height 300ms ease-in;
     }
   }
   @media screen and (min-width: 602px) {
@@ -49,12 +49,12 @@ $image-shrinkage: 0.75;
       }
     }
     & .topic-card-description {
-      height: 170px;
+      max-height: 250px;
       overflow: auto;
-      transition: all 300ms ease-in;
     }
     & .topic-card-description.expanding {
-      height: 440px;
+      max-height: 600px;
+      transition: max-height 300ms ease-in;
     }
   }
 }
